--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,6 +11,8 @@
     <label for="password">Password</label>:
     <input type="password" id="password" name="password" /> <br />
     <input type="submit" value="Sing Up" />
+    <label for="admin">Admin role</label>:
+    <input type="checkbox" id="admin" name="admin" /> <br />
 </form>
 </body>
 </html>
